--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <h1>Learn git with ostad</h1>
     <button class="btn btn-primary p-5 g-5 m-5">Submit</button>
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime est id possimus modi dolorum
+        atque iure officiis nobis illo, ratione dicta et earum unde sunt non? Iusto quos voluptates necessitatibus.</p>
+    <button class="btn btn-primary p-5 g-5 m-5">Submit</button>
+    <nav class="nav nav-navbar">
+<button class="btn btn-success">Submit</button>
+    </nav>
 
     <script src="./bootstrap.bundle.js"></script>
 </body
